# edsdru_tst

./: README.md  pyproject.toml
edsdprj/: manage.py
edsdprj/authapp/migrations/: 0001_initial.py
edsdprj/edsdprj/: asgi.py  urls.py  wsgi.py
edsdprj/mainapp/: context_processors.py  forms.py  medium.py  mixins.py  views.py
edsdprj/mainapp/templates/mainapp/: base.html  guesses.html  index.html
edsdprj/settings/: .env.template  base.py
